Fix character display on mobile

--- a/themes/red/assets/css/site.css
+++ b/themes/red/assets/css/site.css
@@ -62,6 +62,10 @@
         visibility: hidden;
         height: 0;
     }
+
+    #character-container {
+        grid-template-columns: 50% 50%;
+    }
 }
 
 @media (min-width: 1100px) {
@@ -865,4 +869,8 @@ model-viewer {
 
 .project-contribution {
     background-color: #586449;
+}
+
+#character-container {
+    display: grid;
 }
